<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:padding="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/onlinedoctorconsultation" />

        <org.mmtextview.components.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/consultation_confirm"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/speciality_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/consultation_confirm_message"
            android:textColor="@color/blue_800"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:gravity="right"
            android:orientation="horizontal">

            <org.mmtextview.components.MMTextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/cancel"
                android:textColor="@color/blue_800"
                android:textSize="12sp" />

            <org.mmtextview.components.MMTextView
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="18dp"
                android:background="@drawable/rounded_corner_blue"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>