<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="The CareMM"
            android:textColor="@color/title_color"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/margin_3x"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="PATIENT APP"
            android:layout_margin="@dimen/margin_2x"
            android:textColor="@color/title_color"
            android:textSize="15sp"/>

        <ImageView
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:src="@drawable/ic_thecaremm"
            android:textStyle="bold"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="8dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_white"
            android:text=""
            android:hint="Enter Email"
            android:singleLine="true"
            android:padding="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_white"
            android:hint="Enter Password"
            android:text=""
            android:singleLine="true"
            android:inputType="textPassword"
            android:padding="12dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_blue"
            android:padding="6dp"
            android:text="@string/login_btn_txt"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_no_account"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/create_new_account"
            android:textAlignment="center"
            android:textColor="@color/blue_800"/>
    </LinearLayout>

</RelativeLayout>