<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_2x"
    app:cardElevation="@dimen/margin_1x">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical">

        <org.mmtextview.components.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_card_medium"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:text="@string/consultation_message"
            android:textColor="@color/blue_A700"
            android:textSize="@dimen/subtitle_text_size" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/txtConsultation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/consultation_request_message"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivUserProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/margin_small"
                android:scaleType="fitXY"
                android:src="@drawable/consulatation_doctor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <org.mmtextview.components.MMTextView
                    android:id="@+id/txtDoctorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/txtSpecialityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <org.mmtextview.components.MMTextView
            android:id="@+id/txtDoctorProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/doctor_background"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/btnStartConsultation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="12dp"
            android:gravity="right"
            android:text="@string/start_consultation"
            android:textColor="@color/blue_A700" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
