<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/new_addresscard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="1dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/shipping_cancel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="right"
                android:layout_margin="8dp"
                android:src="@drawable/android_cancel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="3dp">

                        <Spinner
                            android:id="@+id/state_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:entries="@array/state"
                            android:padding="5dp"
                            android:spinnerMode="dialog" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/township"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp">

                        <Spinner
                            android:id="@+id/township_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:entries="@array/yangon"
                            android:padding="5dp"
                            android:spinnerMode="dialog" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <org.mmtextview.components.MMTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/full_address"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_rounded_border_grey"
                android:gravity="left"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="2000"
                android:maxLines="3"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <org.mmtextview.components.MMTextView
                android:id="@+id/btn_add"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_3x"
                android:layout_margin="@dimen/margin_3x"
                android:background="@drawable/rounded_corner_blue"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>